        * added new ::ModelAdapter class and refactored base Controller to use it.
        * moved make_pager() from base ::Model to ::Model::Utils
        * added new ::Test classes to ease writing controller-agnostic tests.
        * new, optional 'make_query' method in Controller.
        * move AUTOLOAD() and can() hackery out of base Model into base Object where it belongs.
          Now there is only 2 sins instead of the 3 in previous releases (where we no longer
          monkey-patch the subs at run time).
        * refactor tests to actually perform some CRUD.
        * add ::ModelAdapter::File example.
        * add envvar CXCRUD_TEST in base CX::CRUD to cluck() stack traces on exceptions. Mostly
          useful during testing since the ::Test::Controller now returns only the error.
        * renamed 'buffer' to 'content' in ::Object::File.
        * ::Model::File->fetch() will now always return an object even if it does not yet
          exist on the filesystem.
        * change default create() method in Controller to call methods directly instead of forward()ing.
        * add create() method to REST that just redirects to create_form().
        * change from 'use NEXT' to 'use Class::C3'
        * added support for "x-tunneled-method" param to REST controller in addition to "_http_method". 
          This is for compat with Catalyst::Request::REST::ForBrowsers.

0.27    12 June 2008
        * fix Controller->rm() to check for model_adapter() and call its delete() method as advertised.
        * check for length($oid) instead of defined($oid) in REST->default
        * added CatalystX::CRUD::Results class
        * added naked_results() config option to base Controller
        * refactored base Controller to make all config options into accessors. added t/02-controller
        * change Model::Utils to use req->params rather than param()

0.28    xxx
        * API for ModelAdapter changed to pass controller instance in do_model()
